cabal-version:       3.0
name:                semmc-fuzzer
version:             0.1
synopsis:            Fuzzer for SemMC architectures
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          jtd@galois.com
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat
  default-language:    Haskell2010
  exposed-modules:     SemMC.Fuzzer.Types
                       SemMC.Fuzzer.Util
                       SemMC.Fuzzer.Filters

  build-depends:       base >=4.9 && <5,
                       bytestring,
                       semmc,
                       semmc-synthesis,
                       semmc-arm,
                       semmc-ppc,
                       dismantle-arm:opcodes,
                       text,
                       parameterized-utils,
                       pretty,
                       containers,
                       dismantle-tablegen,
                       utf8-string,
                       aeson,
                       what4

executable semmc-fuzzer
  main-is:             FuzzerMain.hs
  hs-source-dirs:      programs
  ghc-options:         -Wall -threaded -Wcompat
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5,
                       semmc,
                       semmc-synthesis,
                       semmc-fuzzer,
                       semmc-ppc,
                       semmc-arm,
                       dismantle-tablegen,
                       dismantle-ppc:assembler,
                       dismantle-ppc:opcodes,
                       dismantle-ppc:prettyprinter,
                       dismantle-arm:assembler,
                       dismantle-arm:opcodes,
                       dismantle-arm:prettyprinter,
                       dismantle-arm:testing,
                       parameterized-utils,
                       crucible,
                       utf8-string,
                       text,
                       containers,
                       async,
                       config-ini >= 0.2.2,
                       aeson,
                       aeson-pretty,
                       unix,
                       hostname,
                       HTTP,
                       bytestring,
                       pretty,
                       what4
