name:                semmc-ppc
version:             0.1.0.0
synopsis:            Relevant semantics definitions for PPC
-- description:
license:             BSD3
license-file:        LICENSE
author:              Galois Inc.
maintainer:          jgrosen@galois.com
copyright:           (c) Galois Inc. 2017
category:            Compiler
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SemMC.Architecture.PPC32
                       SemMC.Architecture.PPC64
                       SemMC.Architecture.PPC.Base
  other-modules:       SemMC.Architecture.PPC32.Location
                       SemMC.Architecture.PPC32.ConcreteState
                       SemMC.Architecture.PPC64.Location
                       SemMC.Architecture.PPC64.ConcreteState
                       SemMC.Architecture.PPC.Base.Core
                       SemMC.Architecture.PPC.Base.Arithmetic
                       SemMC.Architecture.PPC.Base.Bitwise
                       SemMC.Architecture.PPC.Base.Branch
                       SemMC.Architecture.PPC.Base.Compare
                       SemMC.Architecture.PPC.Base.Special
                       SemMC.Architecture.PPC.Pseudo
                       SemMC.Architecture.PPC.Shared
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , parameterized-utils == 0.1.10
                     , crucible == 0.3.1
                     , semmc
                     , dismantle-tablegen
                     , dismantle-ppc
                     , pretty
                     , bytestring
                     , cereal
                     , containers
                     , constraints
                     , located-base
                     , filepath
                     , megaparsec >= 6 && < 7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
-- Stack doesn't support Cabal 2 yet.
--
-- library ppc-utils
  exposed-modules: Util
                   OpcodeLists
                   Logging
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: tools/lib
  build-depends: base,
                 time,
                 regex >= 1 && < 2,
                 constraints,
                 parameterized-utils,
                 dismantle-tablegen,
                 dismantle-ppc,
                 semmc
--                 semmc-ppc

executable semmc-ppc-test
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: tools
  main-is: Test.hs
  build-depends: base,
                 time,
                 bytestring,
                 crucible,
                 semmc,
                 semmc-ppc,
                 dismantle-tablegen,
                 dismantle-ppc

executable semmc-ppc-iorels
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tools
  main-is: IORelation.hs
  build-depends: base,
                 directory,
                 async,
                 semmc,
                 semmc-ppc,
                 constraints,
                 parameterized-utils,
                 dismantle-tablegen,
                 dismantle-ppc,
                 optparse-applicative

executable semmc-ppc-stratify
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tools
  main-is: Stratify.hs
  build-depends: base,
                 directory,
                 async,
                 optparse-applicative,
                 constraints,
                 parameterized-utils,
                 crucible,
                 semmc,
                 semmc-ppc,
                 dismantle-tablegen,
                 dismantle-ppc

executable semmc-ppc-synthdemo
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts
  hs-source-dirs: tools
  main-is: SynthDemo.hs
  build-depends:   base
                 , semmc
                 , semmc-ppc
                 , bytestring
                 , utf8-string
                 , parameterized-utils
                 , dismantle-tablegen
                 , dismantle-ppc
                 , crucible
                 , base16-bytestring
                 , elf-edit
                 , optparse-applicative
                 , async

executable semmc-ppc-genbase
  default-language: Haskell2010
  hs-source-dirs: tools
  main-is: GenBase.hs
  build-depends: base,
                 optparse-applicative,
                 text,
                 directory,
                 filepath,
                 semmc,
                 semmc-ppc
                 