name:                semmc-ppc
version:             0.1.0.0
synopsis:            Relevant semantics definitions for PPC
-- description:
license:             BSD3
license-file:        LICENSE
author:              Galois Inc.
maintainer:          jgrosen@galois.com
copyright:           (c) Galois Inc. 2017
category:            Compiler
build-type:          Simple
extra-source-files:  ChangeLog.md,
                     data/32/base/*.sem
                     data/32/base/*.fun
                     data/32/manual/*.sem
                     data/32/manual/*.fun
                     data/32/pseudo/*.sem
                     data/32/pseudo/*.fun
                     data/64/base/*.sem
                     data/64/base/*.fun
                     data/64/manual/*.sem
                     data/64/manual/*.fun
                     data/64/pseudo/*.sem
                     data/64/pseudo/*.fun
cabal-version:       >=1.10

library
  exposed-modules:     SemMC.Architecture.PPC
                       SemMC.Architecture.PPC32
                       SemMC.Architecture.PPC32.Opcodes
                       SemMC.Architecture.PPC64
                       SemMC.Architecture.PPC64.Opcodes
                       SemMC.Architecture.PPC.Base
                       SemMC.Architecture.PPC.Eval
                       SemMC.Architecture.PPC.Location
                       SemMC.Architecture.PPC.OperandComponents
  other-modules:       SemMC.Architecture.PPC32.ConcreteState
                       SemMC.Architecture.PPC64.ConcreteState
                       SemMC.Architecture.PPC32.Opcodes.Internal
                       SemMC.Architecture.PPC64.Opcodes.Internal
                       SemMC.Architecture.PPC.Base.Core
                       SemMC.Architecture.PPC.Base.Core.BitSize
                       SemMC.Architecture.PPC.Base.Core.Forms
                       SemMC.Architecture.PPC.Base.Core.Memory
                       SemMC.Architecture.PPC.Base.Core.OperandClasses
                       SemMC.Architecture.PPC.Base.Core.Registers
                       SemMC.Architecture.PPC.Base.Arithmetic
                       SemMC.Architecture.PPC.Base.Bitwise
                       SemMC.Architecture.PPC.Base.Branch
                       SemMC.Architecture.PPC.Base.Compare
                       SemMC.Architecture.PPC.Base.FP
                       SemMC.Architecture.PPC.Base.Memory
                       SemMC.Architecture.PPC.Base.Special
                       SemMC.Architecture.PPC.Base.Sync
                       SemMC.Architecture.PPC.Base.Vector
                       SemMC.Architecture.PPC.Base.VSX
                       SemMC.Architecture.PPC.Pseudo
                       SemMC.Architecture.PPC.Shared
                       SemMC.Architecture.PPC.UF
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , parameterized-utils >= 1 && < 2.1
                     , crucible >= 0.4
                     , semmc
                     , dismantle-tablegen
                     , dismantle-ppc
                     , pretty
                     , text
                     , bytestring
                     , cereal
                     , containers
                     , located-base
                     , filepath
                     , megaparsec >= 7 && < 8
                     , what4 >= 0.4

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
-- Stack doesn't support Cabal 2 yet.
--
-- library ppc-utils
  exposed-modules: Util
                   OpcodeLists
  ghc-options: -Wall
  hs-source-dirs: tools/lib
  build-depends: base,
                 time,
                 parameterized-utils,
                 dismantle-tablegen,
                 dismantle-ppc,
                 semmc
--                 semmc-ppc

executable semmc-ppc-test
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: tools
  main-is: Test.hs
  build-depends: base,
                 time,
                 bytestring,
                 crucible,
                 semmc,
                 semmc-ppc,
                 parameterized-utils,
                 dismantle-tablegen,
                 dismantle-ppc,
                 what4,
                 text

executable semmc-ppc-iorels
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tools
  main-is: IORelation.hs
  build-depends: base,
                 directory,
                 async,
                 semmc,
                 semmc-ppc,
                 parameterized-utils,
                 dismantle-tablegen,
                 dismantle-ppc,
                 optparse-applicative

executable semmc-ppc-stratify
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tools
  main-is: Stratify.hs
  build-depends: base,
                 directory,
                 async,
                 optparse-applicative,
                 parameterized-utils,
                 crucible,
                 semmc,
                 semmc-ppc,
                 dismantle-tablegen,
                 dismantle-ppc,
                 what4

executable semmc-ppc-synthdemo
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts
  hs-source-dirs: tools
  main-is: SynthDemo.hs
  build-depends:   base
                 , semmc
                 , semmc-ppc
                 , bytestring
                 , utf8-string
                 , parameterized-utils
                 , dismantle-tablegen
                 , dismantle-ppc
                 , crucible
                 , base16-bytestring
                 , elf-edit
                 , optparse-applicative
                 , async
                 , unliftio
                 , what4

executable semmc-ppc-genbase
  default-language: Haskell2010
  hs-source-dirs: tools
  main-is: GenBase.hs
  ghc-options: -Wall -rtsopts
  build-depends: base,
                 bytestring,
                 crucible,
                 dismantle-ppc,
                 dismantle-tablegen,
                 optparse-applicative,
                 text,
                 directory,
                 filepath,
                 parameterized-utils,
                 semmc,
                 semmc-ppc,
                 what4

test-suite semmc-ppc-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: semmc-ppc,
                 semmc,
                 dismantle-tablegen,
                 dismantle-ppc,
                 base,
                 containers,
                 bytestring,
                 tasty,
                 tasty-hunit,
                 parameterized-utils,
                 crucible,
                 what4,
                 text