cabal-version:       >=1.10
name:                semmc-synthesis
version:             0.1.0.0
synopsis:            Synthesis of machine code sequences from semantic descriptions
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: SemMC.Synthesis
  other-modules:   SemMC.Synthesis.Cegis
                   SemMC.Synthesis.Cegis.Types
                   SemMC.Synthesis.Cegis.EvalFormula
                   SemMC.Synthesis.Cegis.ReadWriteEval
                   SemMC.Synthesis.Cegis.LLVMMem
                   SemMC.Synthesis.Cegis.MemAccesses
                   SemMC.Synthesis.Cegis.Tests
                   SemMC.Synthesis.Core
                   SemMC.Synthesis.DivideAndConquer
                   SemMC.Synthesis.Template
                   SemMC.Synthesis.Testing
  -- other-extensions:
  build-depends:       base >=4.11 && <5,
                       text,
                       containers,
                       transformers,
                       mtl,
                       ansi-wl-pprint,
                       semmc,
                       parameterized-utils,
                       crucible,
                       crucible-llvm,
                       dismantle-tablegen,
                       what4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
