name:                semmc-toy
version:             0.1.0.0
-- synopsis:
description:         Toy architecture for simplified stratified synthesis
                     development and testing.
license:             BSD3
license-file:        LICENSE
author:              Nathan Collins <conathan@galois.com>
maintainer:          conathan@galois.com
copyright:           2017 Galois Inc
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     SemMC.Toy
                       SemMC.Toy.Tests
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       base >= 4.9 && < 5
                     , async >= 2 && < 3
                     , bv-sized
                     , containers >= 0.5.8
                     , filepath
                     , located-base
                     , text >= 1 && < 2.2
                     , crucible >= 0.4
                     , crucible-llvm
                     , dismantle-tablegen
                     , parameterized-utils >= 2.1.0 && < 2.2
                     , semmc
                     , semmc-learning
                     , semmc-synthesis
                     , what4 >= 0.4

executable semmc-toy-stratify
  hs-source-dirs:      semmc-toy-stratify
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -threaded
  build-depends:       base >= 4.7 && < 5

                     , dismantle-tablegen
                     , crucible
                     , parameterized-utils
                     , semmc
                     , semmc-toy
                     , semmc-learning
                     , async
                     , directory
                     , optparse-applicative
                     , what4

test-suite semmc-toy-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: Formula
               , Stochastic
  build-depends:   semmc
                 , semmc-toy
                 , base
                 , containers
                 , tasty
                 , tasty-hunit
                 , async
                 , directory

